update detail bg

--- a/style.css
+++ b/style.css
@@ -2,10 +2,24 @@
 :root {
   --result-test: calc(var(--pos_y_planet) - var(--scrollYport));
 }
-
+html, body {
+  margin: 0;
+  padding: 0;
+}
 .background-world {
   position: fixed;
+  width: 15vw;
+  height: auto;
   z-index: -10;
+  pointer-events: none;
+}
+
+
+
+.bg-main {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 /* ================= BODY ================= */
